added dedicated get endpoint for readiness probe
